[package]
name = "redwood-wiki"
version = "0.1.0"
authors = ["Benjamin Richner"]
edition = "2018"
license = "GPL-3.0-only"
description = "SQLite-based knowledge base"
keywords = ["wiki", "knowledge-base"]
categories = ["text-processing", "web-programming"]
repository = "https://github.com/BenjaminRi/Redwood-Wiki"

[dependencies]
chrono = "0.4.24"
log = "0.4.17"
fern = "0.6.2"
tokio = { version = "1.27.0", features = ["macros"] }
warp = "0.3.4"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
pulldown-cmark = { version = "0.9.2", default-features = false }
syntect = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"
regex = "1.7.3"
lazy_static = "1.4.0"
#sanitize-filename = "0.4.0"