[package]
name = "redwood-wiki"
version = "0.1.0"
authors = ["Benjamin Richner"]
edition = "2018"
license = "GPL-3.0-only"
description = "SQLite-based knowledge base"
keywords = ["wiki", "knowledge-base"]
categories = ["text-processing", "web-programming"]
repository = "https://github.com/BenjaminRi/Redwood-Wiki"

[dependencies]
chrono = "0.4.31"
log = "0.4.20"
fern = "0.6.2"
tokio = { version = "1.33.0", features = ["macros"] }
warp = "0.3.6"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
pulldown-cmark = { version = "0.9.3", default-features = false }
syntect = "5.1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.2"
regex = "1.10.1"
#sanitize-filename = "0.4.0"
